# python-gherkin-testcontainers

./: README.md  artifacthub-repo.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-17-gherkin-testcontainers-design.md  2026-02-17-gherkin-testcontainers-implementation.md
plugins/eventhubs/: pyproject.toml
plugins/eventhubs/src/gherkin_testcontainers_eventhubs/: __init__.py  plugin.py
plugins/google_pubsub/: pyproject.toml
plugins/google_pubsub/src/gherkin_testcontainers_google_pubsub/: __init__.py  plugin.py
plugins/iggy/: pyproject.toml
plugins/iggy/src/gherkin_testcontainers_iggy/: __init__.py  plugin.py
plugins/kafka/: pyproject.toml
plugins/kafka/src/gherkin_testcontainers_kafka/: __init__.py  plugin.py
plugins/mariadb/: pyproject.toml
plugins/mariadb/src/gherkin_testcontainers_mariadb/: __init__.py  plugin.py
plugins/oracle/: pyproject.toml
plugins/oracle/src/gherkin_testcontainers_oracle/: __init__.py  plugin.py
plugins/playwright/: pyproject.toml
plugins/playwright/src/gherkin_testcontainers_playwright/: __init__.py  plugin.py
plugins/postgres/: pyproject.toml
plugins/postgres/src/gherkin_testcontainers_postgres/: __init__.py  plugin.py
plugins/pulsar/: pyproject.toml
plugins/pulsar/src/gherkin_testcontainers_pulsar/: __init__.py  plugin.py
plugins/sqlite/: pyproject.toml
plugins/sqlite/src/gherkin_testcontainers_sqlite/: __init__.py  plugin.py
src/gherkin_testcontainers/: __init__.py  decorators.py  hooks.py  manager.py  plugin.py  registry.py
tests/integration/features/: environment.py  sqlite_crud.feature
tests/integration/features/steps/: sqlite_steps.py
tests/unit/: test_decorators.py  test_eventhubs_plugin.py  test_google_pubsub_plugin.py  test_hooks.py  test_iggy_plugin.py  test_kafka_plugin.py  test_manager.py  test_mariadb_plugin.py  test_oracle_plugin.py  test_playwright_plugin.py  test_plugin.py  test_postgres_plugin.py  test_public_api.py  test_pulsar_plugin.py  test_registry.py  test_sqlite_plugin.py
