[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gherkin-testcontainers"
version = "0.1.0"
description = "BDD testing framework integrating behave with testcontainers"
requires-python = ">=3.11"
dependencies = [
    "behave>=1.2.6",
    "testcontainers>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]
